Fixed overflow issue

--- a/app/scss/primary.scss
+++ b/app/scss/primary.scss
@@ -44,7 +44,7 @@ body {
   background-color: $flash-white;
   height: 100vh;
   margin-top: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
